--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -1,6 +1,5 @@
-<div class="justify-content-center">
-    <div class="col-md-12">
-        <div class="container">
+<div class="row justify-content-center">
+        <div class="container center">
             <div class="col-md-10 profile-window" *ngIf="user">
                 <div class="row">
                     <div class="row col-md-8 center">
@@ -10,7 +9,7 @@
                              style="max-width:120px;width:100%;max-height:120px;height:100%">
                         <h2 class="center"><b>{{user.login}}</b></h2>
                     </div>
-                    <div class="col-md-4 center">
+                    <div class="row col-md-4 center">
                         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-post"
                                 [routerLink]="['/post/new']">
                             <fa-icon [icon]="'plus'"></fa-icon>
@@ -141,5 +140,4 @@
             </div>
         </div>
         <jhi-scroll-top></jhi-scroll-top>
-    </div>
 </div>
